Refactored directory structure to be more in-line with a traditional web-app/maven project.

--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>DaCeMo Visualisation</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -31,7 +31,7 @@
 					<h2>Welcome to DaCeMo Visualisation</h2>
 				</header>
 				<p>
-					<img src="images/header.jpg" width="100" height="100" />
+					<img src="images/header.jpg" width="100" height="100" alt="Image of a graph."/>
 				</p>
 				<p>This is <strong>DaCeMo Visualisation</strong>,  A website that displays a navigable, query-able, and understandable graph representation of a Data-Centric Model (DaCeMo) of an Enterprise.
 					A complex domain made understandable to enterprise users from middle management, to IT, to CEOs, through varying layers of data abstraction.
