--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,7 +47,7 @@
 			<script>
 
 				//define the structure of the node
-				// this varible can be replaced by the interface which
+				// this variable can be replaced by the interface which
 				// process the server data
 				var nodes = [
 					{ id: "hp:dpmt:1", group: 0, label: "Ministry Of Magic", level: 1 },
@@ -56,7 +56,7 @@
 					{ id: "hp:empl:3"   , group: 1, label: "Gethsemane Prickle"  , level: 2 },
 					{ id: "hp:evet:1"   , group: 2, label: "Explrod to Muggles", level: 3 },
 					{ id: "hp:mugl:1", group: 3, label: "Jacob Kowaiski", level: 4 }
-				]
+				];
 
 				//define the link between the node
 				var links = [
@@ -67,35 +67,34 @@
 					{ target: "hp:mugl:1", source: "hp:evet:1" , strength: 0.1 },
 					{ target: "hp:empl:1", source: "hp:evet:1" , strength: 0.1 },
 					{ target: "hp:empl:1", source: "hp:mugl:1" , strength: 0.1 }
-				]
-
+				];
 
 				function getNodeColor(node) {
-					if(node.level == 1) return 'red'
-					else if(node.level == 2) return 'purple'
-					else if(node.level == 3) return 'green'
+					if(node.level === 1) return 'red';
+					else if(node.level === 2) return 'purple';
+					else if(node.level === 3) return 'green';
 					else return 'gray'
 				}
 
 
-				var width = 800
-				var height = 600
+				var width = 800;
+				var height = 600;
 
 
-				var svg = d3.select('svg')
-				svg.attr('width', width).attr('height', height)
+				var svg = d3.select('svg');
+				svg.attr('width', width).attr('height', height);
 
 				// simulation setup with all forces
 				var linkForce = d3
 						.forceLink()
 						.id(function (link) { return link.id })
-						.strength(function (link) { return link.strength })
+						.strength(function (link) { return link.strength });
 
 				var simulation = d3
 						.forceSimulation()
 						.force('link', linkForce)
 						.force('charge', d3.forceManyBody().strength(-120))
-						.force('center', d3.forceCenter(width / 2, height / 2))
+						.force('center', d3.forceCenter(width / 2, height / 2));
 
 				var linkElements = svg.append("g")
 						.attr("class", "links")
@@ -103,7 +102,7 @@
 						.data(links)
 						.enter().append("line")
 						.attr("stroke-width", 3)
-						.attr("stroke", "rgba(50, 50, 50, 0.2)")
+						.attr("stroke", "rgba(50, 50, 50, 0.2)");
 
 				var nodeElements = svg.append("g")
 						.attr("class", "nodes")
@@ -111,7 +110,7 @@
 						.data(nodes)
 						.enter().append("circle")
 						.attr("r", 10)
-						.attr("fill", getNodeColor)
+						.attr("fill", getNodeColor);
 
 
 
@@ -123,23 +122,20 @@
 						.text(function (node) { return  node.label })
 						.attr("font-size", 20)
 						.attr("dx", 15)
-						.attr("dy", 4)
+						.attr("dy", 4);
 
 
 
 				simulation.nodes(nodes).on('tick', () => {
-					nodeElements
-					.attr('cx', function (node) { return node.x })
-							.attr('cy', function (node) { return node.y })
-					textElements
-					.attr('x', function (node) { return node.x })
-							.attr('y', function (node) { return node.y })
-					linkElements
-					.attr('x1', function (link) { return link.source.x })
+					nodeElements.attr('cx', function (node) { return node.x })
+							.attr('cy', function (node) { return node.y });
+					textElements.attr('x', function (node) { return node.x })
+							.attr('y', function (node) { return node.y });
+					linkElements.attr('x1', function (link) { return link.source.x })
 							.attr('y1', function (link) { return link.source.y })
 							.attr('x2', function (link) { return link.target.x })
 							.attr('y2', function (link) { return link.target.y })
-				})
+				});
 
 				simulation.force("link").links(links)
 
