--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body class="homepage">
 
+	<a href="/DaCeMo_war_exploded/getGraph">Get graphInfo</a>
 	<!-- Header https://templated.co/linear-->
 		<div id="header">
 			<div id="nav-wrapper"> 
@@ -33,6 +34,7 @@
 				<p>
 					<img src="images/header.jpg" width="100" height="100" alt="Image of a graph."/>
 				</p>
+
 				<p>This is <strong>DaCeMo Visualisation</strong>,  A website that displays a navigable, query-able, and understandable graph representation of a Data-Centric Model (DaCeMo) of an Enterprise.
 					A complex domain made understandable to enterprise users from middle management, to IT, to CEOs, through varying layers of data abstraction.
 					DaCeMo is an approach to modelling Enterprise as a set of OWL (Web Ontology Language) Ontologies.</p>
