--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,52 @@
 	</head>
 	<body class="homepage">
 
+	<script src="Scripts/jquery-1.4.1.min.js" type="text/javascript"></script>
+	<script>
+
+		var getString;
+		function callServer(methodType) {
+			var xmlResruest;
+
+			if(window.XMLHttpRequest){
+				xmlResruest = new XMLHttpRequest();
+			}else if(window.ActiveXObject){
+				xmlResruest = new ActiveXObject("MICROSOFT.XMLHTTP");
+			}
+
+			xmlResruest.onreadystatechange = function(){
+				if(xmlResruest.readyState ==4 && xmlResruest.status ==200){
+					document.getElementById("myDiv").innerHTML = "button down";
+					getString = xmlResruest.responseText;
+					document.getElementById("myDiv").innerHTML = getString;
+					drawGraph();
+				}
+
+			}
+
+			params = "comment=" + document.getElementById("comment").value;
+			if(methodType =="GET"){
+				xmlResruest.open("GET","/DaCeMo_war_exploded/getGraph?"+params,true);
+				xmlResruest.send();
+
+			}else if(methodType =="POST"){
+				xmlResruest.open("POST","/DaCeMo_war_exploded/getGraph",true);
+				xmlResruest.setRequestHeader("req","req");
+				xmlResruest.send(params);
+
+			}
+
+		}
+
+
+	</script>
+
+	<div id="comment"><h2>使用 jQuery AJAX 修改文本内容</h2></div>
+	<button onclick="callServer('GET')">获取其他内容</button>
+
+	<div id="myDiv"><h2>Let AJAX change this text</h2></div>
+	<button id="b01" type="button">Change Content</button>
+
 	<a href="/DaCeMo_war_exploded/getGraph">Get graphInfo</a>
 	<!-- Header https://templated.co/linear-->
 		<div id="header">
@@ -48,98 +94,116 @@
 			<script src="https://d3js.org/d3.v4.min.js"></script>
 			<script>
 
-				//define the structure of the node
-				// this variable can be replaced by the interface which
-				// process the server data
-				var nodes = [
-					{ id: "hp:dpmt:1", group: 0, label: "Ministry Of Magic", level: 1 },
-					{ id: "hp:empl:1"   , group: 1, label: "Lucius Malfoy"   , level: 2 },
-					{ id: "hp:empl:2"   , group: 1, label: "Albert Runcorn"   , level: 2 },
-					{ id: "hp:empl:3"   , group: 1, label: "Gethsemane Prickle"  , level: 2 },
-					{ id: "hp:evet:1"   , group: 2, label: "Explrod to Muggles", level: 3 },
-					{ id: "hp:mugl:1", group: 3, label: "Jacob Kowaiski", level: 4 }
-				];
 
-				//define the link between the node
-				var links = [
-					{ target: "hp:empl:1", source: "hp:dpmt:1" , strength: 0.1 },
-					{ target: "hp:empl:2", source: "hp:dpmt:1" , strength: 0.1 },
-					{ target: "hp:empl:3", source: "hp:dpmt:1" , strength: 0.1 },
-					{ target: "hp:evet:1", source: "hp:dpmt:1" , strength: 0.1 },
-					{ target: "hp:mugl:1", source: "hp:evet:1" , strength: 0.1 },
-					{ target: "hp:empl:1", source: "hp:evet:1" , strength: 0.1 },
-					{ target: "hp:empl:1", source: "hp:mugl:1" , strength: 0.1 }
-				];
+				function drawGraph(){
+					//define the structure of the node
+					// this variable can be replaced by the interface which
+					// process the server data
 
-				function getNodeColor(node) {
-					if(node.level === 1) return 'red';
-					else if(node.level === 2) return 'purple';
-					else if(node.level === 3) return 'green';
-					else return 'gray'
-				}
+					var parseArray = getString.split(",");
+
+					var node = new Object();
+					node.id = parseArray[0];
+					node.group = 0;
+					node.label = parseArray[2];
+					node.level = 0;
 
 
-				var width = 800;
-				var height = 600;
+					var nodes = [
+							node,
+						{ id: "hp:dpmt:1", group: 0, label: "Ministry Of Magic", level: 1 },
+						{ id: "hp:empl:1"   , group: 1, label: "Lucius Malfoy"   , level: 2 },
+						{ id: "hp:empl:2"   , group: 1, label: "Albert Runcorn"   , level: 2 },
+						{ id: "hp:empl:3"   , group: 1, label: "Gethsemane Prickle"  , level: 2 },
+						{ id: "hp:evet:1"   , group: 2, label: "Explrod to Muggles", level: 3 },
+						{ id: "hp:mugl:1", group: 3, label: "Jacob Kowaiski", level: 4 }
+					];
+
+					//define the link between the node
+					var links = [
+						{ target: "hp:empl:1", source: "hp:dpmt:1" , strength: 0.1 },
+						{ target: "hp:empl:2", source: "hp:dpmt:1" , strength: 0.1 },
+						{ target: "hp:empl:3", source: "hp:dpmt:1" , strength: 0.1 },
+						{ target: "hp:evet:1", source: "hp:dpmt:1" , strength: 0.1 },
+						{ target: "hp:mugl:1", source: "hp:evet:1" , strength: 0.1 },
+						{ target: "hp:empl:1", source: "hp:evet:1" , strength: 0.1 },
+						{ target: "hp:empl:1", source: "hp:mugl:1" , strength: 0.1 }
+					];
+
+					function getNodeColor(node) {
+						if(node.level === 1) return 'red';
+						else if(node.level === 2) return 'purple';
+						else if(node.level === 3) return 'green';
+						else return 'gray'
+					}
 
 
-				var svg = d3.select('svg');
-				svg.attr('width', width).attr('height', height);
-
-				// simulation setup with all forces
-				var linkForce = d3
-						.forceLink()
-						.id(function (link) { return link.id })
-						.strength(function (link) { return link.strength });
-
-				var simulation = d3
-						.forceSimulation()
-						.force('link', linkForce)
-						.force('charge', d3.forceManyBody().strength(-120))
-						.force('center', d3.forceCenter(width / 2, height / 2));
-
-				var linkElements = svg.append("g")
-						.attr("class", "links")
-						.selectAll("line")
-						.data(links)
-						.enter().append("line")
-						.attr("stroke-width", 3)
-						.attr("stroke", "rgba(50, 50, 50, 0.2)");
-
-				var nodeElements = svg.append("g")
-						.attr("class", "nodes")
-						.selectAll("circle")
-						.data(nodes)
-						.enter().append("circle")
-						.attr("r", 10)
-						.attr("fill", getNodeColor);
+					var width = 800;
+					var height = 600;
 
 
+					var svg = d3.select('svg');
+					svg.attr('width', width).attr('height', height);
 
-				var textElements = svg.append("g")
-						.attr("class", "texts")
-						.selectAll("text")
-						.data(nodes)
-						.enter().append("text")
-						.text(function (node) { return  node.label })
-						.attr("font-size", 20)
-						.attr("dx", 15)
-						.attr("dy", 4);
+					// simulation setup with all forces
+					var linkForce = d3
+							.forceLink()
+							.id(function (link) { return link.id })
+							.strength(function (link) { return link.strength });
+
+					var simulation = d3
+							.forceSimulation()
+							.force('link', linkForce)
+							.force('charge', d3.forceManyBody().strength(-120))
+							.force('center', d3.forceCenter(width / 2, height / 2));
+
+					var linkElements = svg.append("g")
+							.attr("class", "links")
+							.selectAll("line")
+							.data(links)
+							.enter().append("line")
+							.attr("stroke-width", 3)
+							.attr("stroke", "rgba(50, 50, 50, 0.2)");
+
+					var nodeElements = svg.append("g")
+							.attr("class", "nodes")
+							.selectAll("circle")
+							.data(nodes)
+							.enter().append("circle")
+							.attr("r", 10)
+							.attr("fill", getNodeColor);
 
 
 
-				simulation.nodes(nodes).on('tick', () => {
-					nodeElements.attr('cx', function (node) { return node.x })
-							.attr('cy', function (node) { return node.y });
+					var textElements = svg.append("g")
+							.attr("class", "texts")
+							.selectAll("text")
+							.data(nodes)
+							.enter().append("text")
+							.text(function (node) { return  node.label })
+							.attr("font-size", 20)
+							.attr("dx", 15)
+							.attr("dy", 4);
+
+
+
+					simulation.nodes(nodes).on('tick', () => {
+						nodeElements.attr('cx', function (node) { return node.x })
+								.attr('cy', function (node) { return node.y });
 					textElements.attr('x', function (node) { return node.x })
 							.attr('y', function (node) { return node.y });
 					linkElements.attr('x1', function (link) { return link.source.x })
 							.attr('y1', function (link) { return link.source.y })
 							.attr('x2', function (link) { return link.target.x })
 							.attr('y2', function (link) { return link.target.y })
-				});
+				     });
 
-				simulation.force("link").links(links)
+					simulation.force("link").links(links);
+
+
+
+				}
+
 
 			</script>
 		</div>
