--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body class="homepage">
 
-	<script src="Scripts/jquery-1.4.1.min.js" type="text/javascript"></script>
+	<script src="scripts/jquery-1.4.1.min.js" type="text/javascript"></script>
 	<script>
 
 		var getString;
@@ -23,6 +23,8 @@
 				if(xmlResruest.readyState ==4 && xmlResruest.status ==200){
 					document.getElementById("myDiv").innerHTML = "button down";
 					getString = xmlResruest.responseText;
+					console.log(getString);
+
 					document.getElementById("myDiv").innerHTML = getString;
 					drawGraph();
 				}
@@ -49,13 +51,13 @@
 	</script>
 
 	<div id="comment"><h2>使用 jQuery AJAX 修改文本内容</h2></div>
-	<button onclick="callServer('GET')">获取其他内容</button>
+	<button onclick="callServer('POST')">Clickme</button>
 
 	<div id="myDiv"><h2>Let AJAX change this text</h2></div>
 	<button id="b01" type="button">Change Content</button>
 
 	<a href="/DaCeMo_war_exploded/getGraph">Get graphInfo</a>
-	<!-- Header https://templated.co/linear-->
+	<!-- Header https://templated.co/getlinear-->
 		<div id="header">
 			<div id="nav-wrapper"> 
 				<!-- Nav -->
@@ -93,39 +95,31 @@
 			<svg width="1080" height="400"></svg>
 			<script src="https://d3js.org/d3.v4.min.js"></script>
 			<script>
-				callServer('GET');
+				callServer('POST');
 
-				var baseNodes = [
+				console.log(getString)
 
-					{ id: "mammal", group: 0, label: "Mammals", level: 1 },
-					{ id: "dog"   , group: 0, label: "Dogs"   , level: 2 },
-					{ id: "cat"   , group: 0, label: "Cats"   , level: 2 },
-					{ id: "fox"   , group: 0, label: "Foxes"  , level: 2 },
-					{ id: "elk"   , group: 0, label: "Elk"    , level: 2 },
-					{ id: "insect", group: 1, label: "Insects", level: 1 },
-					{ id: "ant"   , group: 1, label: "Ants"   , level: 2 },
-					{ id: "bee"   , group: 1, label: "Bees"   , level: 2 },
-					{ id: "fish"  , group: 2, label: "Fish"   , level: 1 },
-					{ id: "carp"  , group: 2, label: "Carp"   , level: 2 },
-					{ id: "pike"  , group: 2, label: "Pikes"  , level: 2 }
-				]
+				var jsonObject = JSON.parse(getString);
+				console.log(jsonObject.toString())
 
-				var baseLinks = [
-					{ target: "mammal", source: "dog" , strength: 0.7 },
-					{ target: "mammal", source: "cat" , strength: 0.7 },
-					{ target: "mammal", source: "fox" , strength: 0.7 },
-					{ target: "mammal", source: "elk" , strength: 0.7 },
-					{ target: "insect", source: "ant" , strength: 0.7 },
-					{ target: "insect", source: "bee" , strength: 0.7 },
-					{ target: "fish"  , source: "carp", strength: 0.7 },
-					{ target: "fish"  , source: "pike", strength: 0.7 },
-					{ target: "cat"   , source: "elk" , strength: 0.1 },
-					{ target: "carp"  , source: "ant" , strength: 0.1 },
-					{ target: "elk"   , source: "bee" , strength: 0.1 },
-					{ target: "dog"   , source: "cat" , strength: 0.1 },
-					{ target: "fox"   , source: "ant" , strength: 0.1 },
-					{ target: "pike"  , source: "cat" , strength: 0.1 }
-				]
+				var baseNodes = jsonObject["nodes"];
+
+				// var baseLinks = [
+				// 	{ target: "mammal", source: "dog" , strength: 0.7 },
+				// 	{ target: "mammal", source: "cat" , strength: 0.7 },
+				// 	{ target: "mammal", source: "fox" , strength: 0.7 },
+				// 	{ target: "mammal", source: "elk" , strength: 0.7 },
+				// 	{ target: "insect", source: "ant" , strength: 0.7 },
+				// 	{ target: "insect", source: "bee" , strength: 0.7 },
+				// 	{ target: "fish"  , source: "carp", strength: 0.7 },
+				// 	{ target: "fish"  , source: "pike", strength: 0.7 },
+				// 	{ target: "cat"   , source: "elk" , strength: 0.1 },
+				// 	{ target: "carp"  , source: "ant" , strength: 0.1 },
+				// 	{ target: "elk"   , source: "bee" , strength: 0.1 },
+				// 	{ target: "dog"   , source: "cat" , strength: 0.1 },
+				// 	{ target: "fox"   , source: "ant" , strength: 0.1 },
+				// 	{ target: "pike"  , source: "cat" , strength: 0.1 }
+				// ]
 
 				var nodes = [...baseNodes]
 				var links = [...baseLinks]
