--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,12 +7,6 @@
 <body class="homepage">
 
 
-<div id="comment"><h2>conteny</h2></div>
-<button onclick="callServer('POST')">获取其他内容</button>
-
-<div id="myDiv"><h2>Let AJAX change this text</h2></div>
-<button id="b01" type="button">Change Content</button>
-
 <a href="/DaCeMo_war_exploded/getGraph">Get graphInfo</a>
 <!-- Header https://templated.co/linear-->
 <div id="header">
@@ -49,61 +43,57 @@
 	</div>
 </div>
 
+<div id="comment"></div>
+<button onclick="callServer('POST')">UpdateGraph</button>
+
+<div id="myDiv"><h2>Let AJAX change this text</h2></div>
+
 <div id ="d3 graph">
 	<svg width="1080" height="400"></svg>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script>
 
-
-
 		var getString;
 		var nodeArray;
-		var D3node = new Object();
-
-
-		var baseNodes = [
-			D3node,
-			{ id: "mammal", group: 0, label: "Mammals", level: 1 },
-			{ id: "dog"   , group: 0, label: "Dogs"   , level: 2 },
-			{ id: "cat"   , group: 0, label: "Cats"   , level: 2 },
-			{ id: "fox"   , group: 0, label: "Foxes"  , level: 2 },
-			{ id: "elk"   , group: 0, label: "Elk"    , level: 2 },
-			{ id: "insect", group: 1, label: "Insects", level: 1 },
-			{ id: "ant"   , group: 1, label: "Ants"   , level: 2 },
-			{ id: "bee"   , group: 1, label: "Bees"   , level: 2 },
-			{ id: "fish"  , group: 2, label: "Fish"   , level: 1 },
-			{ id: "carp"  , group: 2, label: "Carp"   , level: 2 },
-			{ id: "pike"  , group: 2, label: "Pikes"  , level: 2 }
-		]
-
-		var baseLinks = [
-			{ target: "mammal", source: "dog" , strength: 0.7 },
-			{ target: "mammal", source: "cat" , strength: 0.7 },
-			{ target: "mammal", source: "fox" , strength: 0.7 },
-			{ target: "mammal", source: "elk" , strength: 0.7 },
-			{ target: "insect", source: "ant" , strength: 0.7 },
-			{ target: "insect", source: "bee" , strength: 0.7 },
-			{ target: "fish"  , source: "carp", strength: 0.7 },
-			{ target: "fish"  , source: "pike", strength: 0.7 },
-			{ target: "cat"   , source: "elk" , strength: 0.1 },
-			{ target: "carp"  , source: "ant" , strength: 0.1 },
-			{ target: "elk"   , source: "bee" , strength: 0.1 },
-			{ target: "dog"   , source: "cat" , strength: 0.1 },
-			{ target: "fox"   , source: "ant" , strength: 0.1 },
-			{ target: "pike"  , source: "cat" , strength: 0.1 }
-		]
-
-		var nodes = [...baseNodes]
-		var links = [...baseLinks]
+		var baseNodes;
+		var baseLinks;
+		var nodes;
+		var links;
 
 
 		function updateNode() {
 			console.log(getString);
 			nodeArray = getString.split(',');
-			D3node.id = nodeArray[0];
-			D3node.group = 1;
-			D3node.label = "Muggles";
-			D3node.level = 1;
+
+			console.log(nodeArray);
+			baseNodes = new Array(parseInt(nodeArray.length/2));
+
+			for(i =0;i<parseInt(nodeArray.length/2);i++){
+				console.log(nodeArray[0]);
+				baseNodes[i] = new Object();
+				baseNodes[i].id = nodeArray[2 *i];
+				baseNodes[i].group = parseInt(nodeArray[2 *i +1]);
+				baseNodes[i].label = "Muggles";
+				baseNodes[i].level = 1;
+
+			}
+
+
+
+			baseLinks = new Array(parseInt(baseNodes.length/2));
+
+			for(i =0;i<baseLinks.length;i++){
+				var link = new Object();
+				link.target = baseNodes[i].id;
+				link.source = baseNodes[i+1].id;
+				link.strength = 0.1;
+				baseLinks[i] = link;
+			}
+
+
+
+			nodes = [...baseNodes]
+			links = [...baseLinks]
 		}
 
 
