--- a/src/main/webapp/visualize.html
+++ b/src/main/webapp/visualize.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 
     <meta charset="utf-8">
@@ -17,10 +17,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">AboutBusinessAbstraction</a></li>
+                <li><a href="#">About Business Abstraction</a></li>
                 <li class="current"><a href="visualize.html">Visualisation</a></li>
                 <li><a href="#"></a></li>
-                <li><a href="#">ContactUs</a></li>
+                <li><a href="#">Contact Us</a></li>
                 <li><a href="#">News</a></li>
             </ul>
         </nav>
@@ -38,8 +38,8 @@
                     <div id="comment"></div>
                     <button onclick="callServer('POST')">Query</button>
 
-                    <div id="myDiv"><h2>Display the Graph by CLicking Query Button</h2></div>
-                    <p>The button currently send nothing to backend, but it simulate one complete query process.</p>
+                    <div id="myDiv"><h2>Display the Graph by Clicking the Query Button</h2></div>
+                    <p>The button currently sends nothing to backend, but it simulates one complete query process.</p>
                     <div id ="d3 graph">
                         <svg width="1080" height="400"></svg>
                         <script src="https://d3js.org/d3.v4.min.js"></script>
@@ -68,7 +68,7 @@
             <li><a href="#">Resource</a></li>
             <li><a href="#">Sitemap</a></li>
             <li><a href="#">Feedback</a></li>
-            <li><a href="#">AboutWebsite</a></li>
+            <li><a href="#">About Website</a></li>
             <li><a href="#">Timeline</a></li>
             <li><a href="#">Validation</a></li>
         </ul>
@@ -76,7 +76,7 @@
 
     <!--set description-->
     <div id="info">
-        <p>The website is developed for the COMP8715 assignment &copy; TechLauncher</p>
+        <p>The website is developed for the COMP3500/COMP8715 assignment &copy; TechLauncher</p>
     </div>
 
 </footer>
