--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -65,7 +65,7 @@
 <section id="items">
 	<div class="container">
 		<div id="pic">
-		<img src="images/header.jpg" width="800" height="600" alt="Image of a graph."/>
+		<img src="images/header.jpg" alt="Image of a graph."/>
 		</div>
 	</div>
 </section>
@@ -76,16 +76,6 @@
 
 <!--set the footer-->
 <footer>
-	<div class="social">
-		<div id="facebook">
-			<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=450&layout=standard&action=like&size=small&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-
-		</div>
-		<div id="twitter">
-			<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-		</div>
-	</div>
-
 	<div id="function">
 		<ul>
 			<li><a href="resource.html">Resource</a></li>
@@ -96,6 +86,16 @@
 
 		</ul>
 	</div>
+
+    <div class="social">
+        <div id="facebook">
+            <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=450&layout=standard&action=like&size=small&show_faces=true&share=true&height=80&appId" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+
+        </div>
+        <div id="twitter">
+            <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+    </div>
 
 	<!--set description-->
 	<div id="info">
