--- a/src/main/webapp/visualize.html
+++ b/src/main/webapp/visualize.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <meta charset="utf-8">
@@ -32,21 +33,16 @@
 <section id="main">
     <div class="container">
         <article>
-            <div id="pic">
-                <div>
 
-                    <div id="comment"></div>
-                    <button onclick="callServer('POST')">Query</button>
+            <button onclick="callServer('POST')">Query</button>
 
-                    <div id="myDiv"><h2>Display the Graph by Clicking the Query Button</h2></div>
-                    <p>The button currently sends nothing to backend, but it simulates one complete query process.</p>
-                    <div id ="d3 graph">
-                        <svg width="1080" height="400"></svg>
-                        <script src="https://d3js.org/d3.v4.min.js"></script>
-                        <script type="text/javascript" src="js/get_data.js"></script>
-                    </div>
-                </div>
-            </div>
+            <div id="myDiv"><h2>Display the Graph by Clicking the Query Button</h2></div>
+            <p>The button currently sends nothing to backend, but it simulates one complete query process.</p>
+            <div id="d3c"></div>
+            <script src="https://d3js.org/d3.v4.min.js"></script>
+            <script type="text/javascript" src="js/get_data.js"></script>
+
+
         </article>
     </div>
 </section>
