--- a/src/main/webapp/visualize.html
+++ b/src/main/webapp/visualize.html
@@ -35,7 +35,7 @@
         <button onclick="callServer('POST')">Start Query</button>
         <button onclick="redo()">Redo</button>
         <button onclick="undo()">Undo</button>
-        <button onclick="printGraph()">Print</button>
+        <button id='saveButton'>Export Graph</button>
 
         <div id="myDiv"><p>Display the Graph by Clicking the Query Button</p></div>
 
@@ -43,6 +43,9 @@
             <div id="d3c"></div>
             <script src="https://d3js.org/d3.v3.min.js"></script>
             <script type="text/javascript" src="js/get_data.js"></script>
+            <script src="https://cdn.rawgit.com/eligrey/canvas-toBlob.js/f1a01896135ab378aa5c0118eadd81da55e698d8/canvas-toBlob.js"></script>
+            <script src="https://cdn.rawgit.com/eligrey/FileSaver.js/e9d941381475b5df8b7d7691013401e171014e89/FileSaver.min.js"></script>
+            <script type="text/javascript" src="js/process_query.js"></script>
         </div>
     </div>
 </section>
