Fixed all instances of 'Visualization' -> 'Visualisation'. Made index banner more visible.

--- a/src/main/webapp/visualize.html
+++ b/src/main/webapp/visualize.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 
-    <title>DaCeMo Visualisation|D3 Graph</title>
+    <title>DaCeMo Visualisation | D3 Graph</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -64,19 +64,9 @@
         </ul>
     </div>
 
-    <!--<div class="social">-->
-        <!--<div id="facebook">-->
-            <!--<iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&width=450&layout=standard&action=like&size=small&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>-->
-
-        <!--</div>-->
-        <!--<div id="twitter">-->
-            <!--<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
-        <!--</div>-->
-    <!--</div>-->
-
     <!--set description-->
     <div id="info">
-        <p>The website is developed for the COMP3500/COMP8715 assignment &copy; TechLauncher</p>
+        <p>This website was developed for COMP3500/COMP8715 &copy; TechLauncher</p>
     </div>
 
 </footer>
