Put all 'graph export' code in one file

--- a/src/main/webapp/visualize.html
+++ b/src/main/webapp/visualize.html
@@ -35,7 +35,7 @@
         <button onclick="sendNodeRequest(null, 'init')">Start Query</button>
         <button onclick="redo()">Redo</button>
         <button onclick="undo()">Undo</button>
-        <button id='saveButton'>Export Graph</button>
+        <button onclick="printGraph()">Export Graph</button>
 
         <div id="myDiv"><p>Display the Graph by Clicking the Query Button</p></div>
 
